Added Puerto Rico

--- a/index.html
+++ b/index.html
@@ -274,6 +274,12 @@
         <li><a href="https://www.7cups.com/" target="_blank">7 Cups</a></li>
     </ul>
 
+    <h2>Puerto Rico</h2>
+    <ul>
+        <li><a href="https://www.casem.org/" target="_blank">Línea PAS</a> - Teléfono: <a href="tel:787-644-0355">787-644-0355</a></li>
+        <li><a href="https://www.7cups.com/" target="_blank">7 Cups</a></li>
+    </ul>
+
     <h2>Romania</h2>
     <ul>
         <li><a href="http://www.antisuicid.com/" target="_blank">Alianța Română de Prevenție a Suicidului</a> - Phone: <a href="tel:0800801200">0800 801 200</a></li>
