--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
                 counter = parseInt(counter) + 1;
             }
             localStorage.setItem('visitorCounter', counter);
-            document.getElementById('counter').textContent = 'Lives Saved: ' + counter;
+            document.getElementById('counter').textContent = 'Potential Rescues: ' + counter;
         };
     </script>
 </head>
 <body>
     <div class="top-bar">
         <h1>Resilient Rhino</h1>
-        <p id="counter">Lives Saved: 0</p>
+        <p id="counter">Potential Rescues: 0</p>
     </div>
 
     <h1>Suicide Prevention Resources</h1>
