--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <style>
         /* CSS for the top display bar */
         .top-bar {
-            background-color: #333;
-            color: #fff;
+            background-color: #D4C6E9; /* Low stress color */
+            color: #3E4147;
             padding: 10px;
             display: flex;
             justify-content: space-between;
@@ -21,6 +21,10 @@
             font-size: 16px;
             margin: 0;
             padding: 0;
+        }
+        body {
+            background-color: #E6E6FA; /* Light lavender color to decrease stress */
+            color: #333; /* Dark gray text color for better readability */
         }
     </style>
     <script>
