--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
       </script>
       
       <title>Resilient Rhino - Suicide Prevention Resources</title>
-      <link rel="icon" href="public/images/rhino.png" type="image/x-icon">
+      <link rel="icon" href="../public/images/rhino.png" type="image/x-icon">
       <style>
           /* General Body CSS */
           body {
@@ -108,7 +108,7 @@
   <body>
       <div class="top-bar">
           <h1>
-              <img src="public/images/rhino.png" alt="Favicon">
+              <img src="../public/images/rhino.png" alt="Favicon">
               Resilient Rhino
           </h1>
           <p id="counter">Potential Rescues: 0</p>
