Fixed resource display issues

--- a/src/index.html
+++ b/src/index.html
@@ -119,8 +119,8 @@
 
     <div id="resources"></div>
 
-    <script src="countries.js"></script>
-    <script src="app.js"></script>
+    <script src="countries.js" type="module"></script>
+    <script src="app.js" type="module"></script>
     
     <!-- Update counter value dynamically -->
     <!-- Remove for local tests -->
