--- a/src/index.html
+++ b/src/index.html
@@ -120,9 +120,9 @@
 
     <div id="resources"></div>
 
-    <script src="countries.js"></script>
-    <script src="countryCodes.js"></script>
-    <script src="app.js"></script>
+    <script src="./countries.js"></script>
+    <script src="./countryCodes.js"></script>
+    <script src="./app.js"></script>
     
     <!-- Update counter value dynamically -->
     <!-- Remove for local tests -->
