Added Remaining Country Codes

--- a/src/index.html
+++ b/src/index.html
@@ -116,7 +116,7 @@
       </div>
 
     <h1>Suicide Prevention Resources</h1>
-    <h2>Need help? Find resources for your country:</h2>
+    <h2>Need help? Find resources for your location:</h2>
 
     <div id="resources"></div>
 
