--- a/src/index.html
+++ b/src/index.html
@@ -30,11 +30,12 @@
           /* General Body CSS */
           body {
               font-family: 'Helvetica Neue', Arial, sans-serif;
-              background: #E6E6FA; /* Light lavender color to decrease stress */
+              background: linear-gradient(120deg, #E6E6FA, #C9E8FF); /* Light lavender color and linear gradient to decrease stress */
               color: #333;
               line-height: 1.5;
               margin: 0;
               padding: 0;
+              overflow-x: hidden; /* Prevent white background if too far left or right */
           }
   
           /* Top bar styling */
@@ -58,6 +59,7 @@
           }
   
           .top-bar #counter {
+              font-family: 'Helvetica Neue', Arial, sans-serif;
               font-size: 18px;
               color: #333;
           }
@@ -68,6 +70,8 @@
               font-size: 24px;
               margin-top: 20px;
               text-align: center;
+              text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.25);
+              transition: text-shadow 0.3s ease-in-out;
           }
   
           h2 {
@@ -87,13 +91,15 @@
           }
   
           a {
-              color: #0077cc;
+            color: #FF4081; /* Pink link color */
               text-decoration: none;
               transition: color 0.2s;
+              font-weight: bold;
           }
-  a
           a:hover {
-              color: #005999;
+            color: #FF6E98; /* Lighter pink color on hover */
+            transform: scale(1.05); /* Slight scale effect on hover */
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3); /* Text shadow on hover */
           }
   
           /* Responsive design */
