Centered Country Cards

--- a/src/index.html
+++ b/src/index.html
@@ -161,6 +161,13 @@
         background-color: #FF6E98;
         }
 
+        #resources {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+
+
         /* Responsive design */
         @media (max-width: 600px) {
             .top-bar {
