Added Rhino Cursor

--- a/src/country-details.html
+++ b/src/country-details.html
@@ -8,6 +8,7 @@
   <style>
     /* General Body CSS */
     body {
+      cursor: url('../public/images/mascots/cursor.cur'), auto;
       font-family: 'Helvetica Neue', Arial, sans-serif;
       background: linear-gradient(120deg, #E6E6FA, #C9E8FF);
       color: #333;
