Added Hearts That Follow The Cursor

--- a/src/country-details.html
+++ b/src/country-details.html
@@ -64,6 +64,16 @@
       vertical-align: middle;
       margin-right: 5px;
     }
+    .heart {
+        position: absolute;
+        width: 30px;
+        height: 30px;
+        background: url('../public/images/heart.png'); /* Replace with your heart image or SVG */
+        background-size: contain;
+        background-repeat: no-repeat;
+        opacity: 100;
+        transition: opacity 0.05s ease-in-out;
+    }
   </style>
   <!-- Flag Icon CSS library -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/3.5.0/css/flag-icon.min.css">
@@ -74,5 +84,6 @@
   <script src="./countries.js"></script>
   <script src="./countryCodes.js"></script>
   <script src="./country-details.js"></script>
+  <script src="./heartsCursor.js"></script>
 </body>
 </html>
