--- a/src/country-details.html
+++ b/src/country-details.html
@@ -68,7 +68,7 @@
         position: absolute;
         width: 30px;
         height: 30px;
-        background: url('../public/images/heart.png'); /* Replace with your heart image or SVG */
+        background: url('../public/images/heart.png');
         background-size: contain;
         background-repeat: no-repeat;
         opacity: 100;
