--- a/src/country-details.html
+++ b/src/country-details.html
@@ -24,6 +24,7 @@
       padding: 20px;
       background-color: #FFF;
       box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
+      border-radius: 10px;
     }
 
     #country-details h2 {
