--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
     <style>
         /* General Body CSS */
         body {
-            cursor: url('../public/images/cursors/cursor.cur'), auto;
+            cursor: url('../public/images/cursors/rhinoHeartCursor.cur'), auto;
             font-family: 'Helvetica Neue', Arial, sans-serif;
             background: linear-gradient(120deg, #E6E6FA, #C9E8FF); /* Light lavender color and linear gradient to decrease stress */
             color: #333;
@@ -234,7 +234,7 @@
     <script src="./countries.js"></script>
     <script src="./countryCodes.js"></script>
     <script src="./app.js"></script>
-    <script src="./heartsCursor.js"></script>
+    <script src="./heartsEffect.js"></script>
     <script src="./fishCursor.js"></script>
 
     <!-- Update counter value dynamically -->
