--- a/src/country-details.html
+++ b/src/country-details.html
@@ -5,79 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="../public/images/mascots/rhino.png" type="image/x-icon">
   <title>Country Details</title>
-  <style>
-    /* General Body CSS */
-    body {
-      cursor: url('../public/images/cursors/rhinoHeartCursor.cur'), auto;
-      font-family: 'Helvetica Neue', Arial, sans-serif;
-      background: linear-gradient(120deg, #E6E6FA, #C9E8FF);
-      color: #333;
-      line-height: 1.5;
-      margin: 0;
-      padding: 0;
-      overflow-x: hidden;
-    }
-
-    /* Content CSS */
-    #country-details {
-      margin: 20px;
-      padding: 20px;
-      background-color: #FFF;
-      box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
-      border-radius: 10px;
-    }
-
-    #country-details h2 {
-      color: #3E4147;
-      font-size: 28px;
-      margin-bottom: 10px;
-      text-align: center;
-      text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.25);
-      transition: text-shadow 0.3s ease-in-out;
-    }
-
-    #country-details ul {
-      list-style-type: none;
-      padding: 0;
-      margin: 0;
-    }
-
-    #country-details li {
-      margin-bottom: 10px;
-      text-align: center;
-    }
-
-    #country-details a {
-      color: #FF4081;
-      text-decoration: none;
-      transition: color 0.2s;
-      font-weight: bold;
-    }
-
-    #country-details a:hover {
-      color: #FF6E98;
-      transform: scale(1.05);
-      text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
-    }
-
-    /* Flag Icon CSS */
-    .flag-icon {
-      vertical-align: middle;
-      margin-right: 5px;
-    }
-    .heart {
-        position: absolute;
-        width: 30px;
-        height: 30px;
-        background: url('../public/images/heart.png');
-        background-size: contain;
-        background-repeat: no-repeat;
-        opacity: 100;
-        transition: opacity 0.05s ease-in-out;
-    }
-  </style>
   <!-- Flag Icon CSS library -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/3.5.0/css/flag-icon.min.css">
+  <link rel="stylesheet" href="./country-details.css">
 </head>
 <body>
   <div id="country-details"></div>
