--- a/src/home.html
+++ b/src/home.html
@@ -3,26 +3,7 @@
 <head>
     <!-- Google Analytics tracking code -->
     <!-- Remove for local tests -->
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
-
-        // Update the tracking ID dynamically
-        fetch('/.netlify/functions/google-analytics-tracking-id')
-          .then(response => response.json())
-          .then(data => {
-            const trackingId = data.trackingId;
-            gtag('config', trackingId);
-
-            const scriptElement = document.createElement('script');
-            scriptElement.src = `https://www.googletagmanager.com/gtag/js?id=${trackingId}`;
-            document.head.appendChild(scriptElement);
-          })
-          .catch(error => {
-            console.error('Failed to fetch Google Analytics tracking ID:', error);
-          });
-    </script>
+    <script src="./googleAnalytics.js"></script>
       
     <title>Resilient Rhino - Suicide Prevention Resources</title>
     <link rel="icon" href="../public/images/mascots/rhino.png" type="image/x-icon">
@@ -59,15 +40,6 @@
 
     <!-- Update counter value dynamically -->
     <!-- Remove for local tests -->
-    <script>
-    window.addEventListener('DOMContentLoaded', (event) => {
-        fetch('/.netlify/functions/fetch-analytics')
-            .then(response => response.json())
-            .then(data => {
-                const counter = document.getElementById('counter');
-                counter.textContent = `Potential Rescues (Manually Verified): ${data.uniqueVisitors}`;
-            });
-    });
-    </script>
+    <script src="./potentialRescues.js"></script>
 </body>
 </html>
