Added Back Button and Hover Effects

--- a/src/country-details.html
+++ b/src/country-details.html
@@ -11,10 +11,12 @@
 </head>
 <body>
   <div id="country-details"></div>
+  <button id="back-button">Back to Home</button>
 
   <script src="./countries.js"></script>
   <script src="./countryCodes.js"></script>
   <script src="./country-details.js"></script>
+  <script src="./backButton.js"></script>
   <script src="./heartsEffect.js"></script>
 </body>
 </html>
