--- a/src/home.html
+++ b/src/home.html
@@ -2,7 +2,6 @@
 <html lang="en">
 <head>
     <!-- Google Analytics tracking code -->
-    <!-- Remove for local tests -->
     <script src="./googleAnalytics.js"></script>
       
     <title>Resilient Rhino - Suicide Prevention Resources</title>
@@ -19,7 +18,7 @@
             Resilien<span id="t-click" style="cursor: pointer; padding-right: 5px;" onclick="handleTClick(event)">t</span> Rhino
         </h1>
         <p id="counter">Potential Rescues (Manually Verified): 0</p>
-    </div>    
+    </div> 
 
     <h1>Suicide Prevention Resources</h1>
     <h2>Need help? Find resources for your location:</h2>
@@ -37,9 +36,9 @@
     <script src="./app.js"></script>
     <script src="./heartsEffect.js"></script>
     <script src="./fishCursor.js"></script>
+    <script src="./animeCursors.js"></script>
 
     <!-- Update counter value dynamically -->
-    <!-- Remove for local tests -->
     <script src="./potentialRescues.js"></script>
 </body>
 </html>
