--- a/src/home.html
+++ b/src/home.html
@@ -25,7 +25,7 @@
 
     <div class="search-bar">
         <img src="../public/images/mascots/rhinoHeart.png" alt="Image" style="width: 75px; height: 75px; margin-right: 10px;">
-        <input type="text" id="search-input" placeholder="Search for a country">
+        <input type="text" id="search-input" placeholder="Search for a country" onkeydown="if (event.keyCode === 13 || event.key === 'Enter') searchCountry()">
         <button type="button" onclick="searchCountry()">Search</button>
       </div>      
 
