--- a/src/home.html
+++ b/src/home.html
@@ -3,17 +3,19 @@
 <head>
 
     <!-- Meta tags for SEO (Uncomment once site is in a ready state)-->
-    <!-- <meta charset="UTF-8">
+    <!-- 
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Resilient Rhino provides suicide prevention resources to help people globally. Find local resources for your country.">
-    <meta name="keywords" content="Suicide Prevention, Mental Health, Support, Counselling, Resources">
+    <meta name="description" content="Resilient Rhino is a global resource platform providing local suicide prevention hotlines, counseling resources, and mental health support.">
+    <meta name="keywords" content="Suicide Prevention, Mental Health, Support, Counselling, Hotlines, Resources, Global Support, Local Resources">
     <meta name="author" content="Resilient Rhino">
     <meta name="robots" content="index, follow">
-    <meta property="og:title" content="Resilient Rhino - Global Suicide Prevention Resources">
-    <meta property="og:description" content="Resilient Rhino provides suicide prevention resources to help people globally. Find local resources for your country.">
+    <meta property="og:title" content="Resilient Rhino - Global Suicide Prevention Hotlines & Resources">
+    <meta property="og:description" content="Resilient Rhino is a global resource platform providing local suicide prevention hotlines, counseling resources, and mental health support.">
     <meta property="og:url" content="https://resilientrhino.org/">
     <meta property="og:type" content="website">
-    <meta property="og:site_name" content="Resilient Rhino"> -->
+    <meta property="og:site_name" content="Resilient Rhino">
+    -->
 
     <!-- Google Analytics tracking code -->
     <script src="./googleAnalytics.js"></script>
