Improved search algorithm to include country nicknames

--- a/src/home.html
+++ b/src/home.html
@@ -56,6 +56,7 @@
 
     <script src="./countries.js"></script>
     <script src="./countryCodes.js"></script>
+    <script src="./countryNicknames.js"></script>
     <script src="./app.js"></script>
     <script src="./heartsEffect.js"></script>
     <script src="./fishCursor.js"></script>
