Added additional information sections

--- a/src/home.html
+++ b/src/home.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Resilient Rhino is a global resource platform providing local suicide prevention hotlines, counseling resources, and mental health support.">
-    <meta name="keywords" content="Suicide Prevention, Mental Health, Support, Counselling, Hotlines, Resources, Global Support, Local Resources">
+    <meta name="keywords" content="Suicide Prevention, Mental Health, Support, Counseling, Hotlines, Resources, Global Support, Local Resources">
     <meta name="author" content="Resilient Rhino">
     <meta name="robots" content="index, follow">
     <meta property="og:title" content="Resilient Rhino - Global Suicide Prevention Hotlines & Resources">
@@ -34,6 +34,7 @@
             <!-- The reason for Resilient Rhino being displayed this way is an easter egg (see fishCursor.js) -->
             Resilien<span id="t-click" style="cursor: pointer; padding-right: 5px;" onclick="handleTClick(event)">t</span> Rhino
         </h1>
+        <p>Try to find the easter eggs!</p>
         <p id="counter">Potential Rescues (Manually Verified): 0</p>
     </div> 
 
@@ -53,6 +54,15 @@
     </div>
 
     <div id="resources"></div>
+
+    <div id="disclaimer">
+        <h2>Disclaimer:</h2>
+        <p>
+            The provided resources include suicide prevention hotlines, counseling services, and other mental health support. 
+            These resources have been sourced from various organizations and manually verified to ensure accuracy. 
+            However, please note that the availability and quality of the services may vary. 
+        </p>
+    </div>
 
     <script src="./countries.js"></script>
     <script src="./countryCodes.js"></script>
