Replaced :D with emoji

--- a/src/home.html
+++ b/src/home.html
@@ -34,7 +34,7 @@
             <!-- The reason for Resilient Rhino being displayed this way is an easter egg (see fishCursor.js) -->
             Resilien<span id="t-click" style="cursor: pointer; padding-right: 5px;" onclick="handleTClick(event)">t</span> Rhino
         </h1>
-        <p>Try to find the easter eggs! :D</p>
+        <p>Try to find the easter eggs! 😄</p>
         <p id="counter">Potential Rescues (Manually Verified): 0</p>
     </div> 
 
