--- a/src/home.html
+++ b/src/home.html
@@ -17,6 +17,12 @@
     <meta property="og:site_name" content="Resilient Rhino">
     -->
 
+    <!-- Meta tags for Security -->
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'; style-src 'self'; img-src 'self'">
+    <meta name="referrer" content="strict-origin-when-cross-origin">
+    <meta http-equiv="X-Content-Type-Options" content="nosniff">
+    <meta http-equiv="X-Frame-Options" content="SAMEORIGIN">
+
     <!-- Google Analytics tracking code -->
     <script src="./googleAnalytics.js"></script>
       
