--- a/src/home.html
+++ b/src/home.html
@@ -10,11 +10,14 @@
     <meta name="keywords" content="Suicide Prevention, Mental Health, Support, Counseling, Hotlines, Resources, Global Support, Local Resources">
     <meta name="author" content="Resilient Rhino">
     <meta name="robots" content="index, follow">
+    <meta name="revisit-after" content="1 days">
     <meta property="og:title" content="Resilient Rhino - Global Suicide Prevention Hotlines & Resources">
     <meta property="og:description" content="Resilient Rhino is a global resource platform providing local suicide prevention hotlines, counseling resources, and mental health support.">
     <meta property="og:url" content="https://resilientrhino.org/">
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="Resilient Rhino">
+    <meta name="twitter:title" content="Resilient Rhino - Global Suicide Prevention Hotlines & Resources">
+    <meta name="twitter:description" content="Resilient Rhino is a global resource platform providing local suicide prevention hotlines, counseling resources, and mental health support.">
     -->
 
     <!-- Meta tags for Security -->
