Added Quick Exit

--- a/src/country-details.html
+++ b/src/country-details.html
@@ -17,7 +17,9 @@
   <link rel="stylesheet" href="./country-details.css">
 </head>
 <body>
+  <script src="./quickExit.js"></script>
   <div id="country-details"></div>
+  <button class="quick-exit-button" onclick="window.handleQuickExit()">Quick Exit</button>
   <button id="back-button">Back to Home</button>
 
   <script src="./countries.js"></script>
