--- a/src/refresh.html
+++ b/src/refresh.html
@@ -15,6 +15,7 @@
     
     <meta http-equiv="refresh" content="0;URL='https://www.weather.com'" />
     <link rel="icon" href="https://www.google.com/favicon.ico" type="image/x-icon">
+    <title>Refreshing...</title>
     <style>
         body {
             font-family: Arial, sans-serif;
