Updated mobile view

--- a/src/home.html
+++ b/src/home.html
@@ -4,7 +4,7 @@
 
     <!-- Meta tags for SEO (Uncomment once site is in a ready state)-->
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"> -->
     <!--
     <meta name="description" content="Resilient Rhino is a global resource platform providing local suicide prevention hotlines, counseling resources, and mental health support.">
     <meta name="keywords" content="Suicide Prevention, Mental Health, Support, Counseling, Hotlines, Resources, Global Support, Local Resources">
