--- a/src/country-details.html
+++ b/src/country-details.html
@@ -3,12 +3,12 @@
 <head>
   <!-- Meta tags for SEO -->
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
 
-    <!-- Meta tags for Security -->
-    <meta name="referrer" content="strict-origin-when-cross-origin">
-    <meta http-equiv="X-Content-Type-Options" content="nosniff">
-    <meta http-equiv="X-Frame-Options" content="SAMEORIGIN">
+  <!-- Meta tags for Security -->
+  <meta name="referrer" content="strict-origin-when-cross-origin">
+  <meta http-equiv="X-Content-Type-Options" content="nosniff">
+  <meta http-equiv="X-Frame-Options" content="SAMEORIGIN">
 
   <link rel="icon" href="../public/images/mascots/rhino.png" type="image/x-icon">
   <title>Country Details</title>
