Separated style from html file

--- a/src/refresh.html
+++ b/src/refresh.html
@@ -16,28 +16,7 @@
     <meta http-equiv="refresh" content="0;URL='https://www.weather.com'" />
     <link rel="icon" href="https://www.google.com/favicon.ico" type="image/x-icon">
     <title>Refreshing...</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-            background-color: #ffffff;
-        }
-        .container {
-            text-align: center;
-        }
-        .logo {
-            height: 40px;
-            margin-bottom: 20px;
-        }
-        .text {
-            color: #757575;
-            font-size: 20px;
-        }
-    </style>
+    <link rel="stylesheet" href="./refresh.css">
 </head>
 <body>
     <div class="container">
