Made Resilient Rhino a PWA

--- a/src/home.html
+++ b/src/home.html
@@ -28,7 +28,7 @@
     <!-- Google Analytics tracking code -->
     <script src="./googleAnalytics.js"></script>
       
-    <title>Resilient Rhino - Suicide Prevention Resources</title>
+    <title>Resilient Rhino - Global Suicide Prevention Hotlines & Resources</title>
     <link rel="icon" href="../public/images/mascots/rhino.png" type="image/x-icon">
     <!-- Flag Icon CSS library -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/3.5.0/css/flag-icon.min.css">
