Registered service worker

--- a/src/country-details.html
+++ b/src/country-details.html
@@ -3,7 +3,7 @@
 <head>
   <!-- Meta tags for SEO -->
   <meta charset="UTF-8">
-  <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- Meta tags for Security -->
   <meta name="referrer" content="strict-origin-when-cross-origin">
