Linked manifest.json

--- a/src/country-details.html
+++ b/src/country-details.html
@@ -10,6 +10,9 @@
   <meta http-equiv="X-Content-Type-Options" content="nosniff">
   <meta http-equiv="X-Frame-Options" content="SAMEORIGIN">
 
+    <!-- Service worker registration -->
+    <link rel="manifest" href="../manifest.json">
+
   <link rel="icon" href="../public/images/mascots/rhino.png" type="image/x-icon">
   <title>Country Details</title>
   <!-- Flag Icon CSS library -->
