--- a/src/home.html
+++ b/src/home.html
@@ -27,6 +27,9 @@
 
     <!-- Google Analytics tracking code -->
     <script src="./googleAnalytics.js"></script>
+
+    <!-- Service worker registration -->
+    <link rel="manifest" href="../manifest.json">
       
     <title>Resilient Rhino - Global Suicide Prevention Hotlines & Resources</title>
     <link rel="icon" href="../public/images/mascots/rhino.png" type="image/x-icon">
