--- a/src/refresh.html
+++ b/src/refresh.html
@@ -12,6 +12,9 @@
     <meta name="referrer" content="strict-origin-when-cross-origin">
     <meta http-equiv="X-Content-Type-Options" content="nosniff">
     <meta http-equiv="X-Frame-Options" content="SAMEORIGIN">
+
+    <!-- Service worker registration -->
+    <link rel="manifest" href="../manifest.json">
     
     <meta http-equiv="refresh" content="0;URL='https://www.weather.com'" />
     <link rel="icon" href="https://www.google.com/favicon.ico" type="image/x-icon">
