--- a/src/country-details.html
+++ b/src/country-details.html
@@ -4,6 +4,7 @@
   <!-- Meta tags for SEO -->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="theme-color" content="#000000"/>
 
   <!-- Meta tags for Security -->
   <meta name="referrer" content="strict-origin-when-cross-origin">
