--- a/src/refresh.html
+++ b/src/refresh.html
@@ -7,6 +7,7 @@
     <!-- Meta tags for SEO (Uncomment once site is in a ready state)-->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="theme-color" content="#000000"/>
 
     <!-- Meta tags for Security -->
     <meta name="referrer" content="strict-origin-when-cross-origin">
