--- a/src/website/country-details.html
+++ b/src/website/country-details.html
@@ -14,7 +14,7 @@
     <!-- Service worker registration -->
     <link rel="manifest" href="../manifest.json">
 
-  <link rel="icon" href="../public/images/mascots/rhino.png" type="image/x-icon">
+  <link rel="icon" href="../../public/images/mascots/rhino.png" type="image/x-icon">
   <title>Country Details</title>
   <!-- Flag Icon CSS library -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/3.5.0/css/flag-icon.min.css">
