Made optimization changes
Fixed incorrect security tag and switched to a modern image format (WebP) for faster load times

--- a/src/website/home.html
+++ b/src/website/home.html
@@ -24,7 +24,6 @@
     <!-- Meta tags for Security -->
     <meta name="referrer" content="strict-origin-when-cross-origin">
     <meta http-equiv="X-Content-Type-Options" content="nosniff">
-    <meta http-equiv="X-Frame-Options" content="SAMEORIGIN">
 
     <!-- Google Analytics tracking code -->
     <script src="./googleAnalytics.js"></script>
@@ -33,7 +32,7 @@
     <link rel="manifest" href="../manifest.json">
       
     <title>Resilient Rhino - Global Suicide Prevention Hotlines & Resources</title>
-    <link rel="icon" href="../../public/images/mascots/rhino.png" type="image/x-icon">
+    <link rel="icon" href="../../public/images/mascots/rhino.webp" type="image/x-icon">
     <!-- Flag Icon CSS library -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/3.5.0/css/flag-icon.min.css">
     <link rel="stylesheet" href="./home.css">
@@ -49,7 +48,7 @@
 
     <div class="top-bar">
         <h1>
-            <img src="../../public/images/mascots/rhino.png" alt="Favicon">
+            <img src="../../public/images/mascots/rhino.webp" alt="Favicon">
             <!-- The reason for Resilient Rhino being displayed this way is an easter egg (see fishCursor.js) -->
             Resilien<span id="t-click" style="cursor: pointer; padding-right: 5px;" onclick="handleTClick(event)">t</span> Rhino
         </h1>
@@ -62,7 +61,7 @@
     <h2>Need help? Find resources for your location:</h2>
 
     <div class="search-bar">
-        <img src="../../public/images/mascots/rhinoHeart.png" alt="Image" style="width: 75px; height: 75px; margin-right: 10px;">
+        <img src="../../public/images/mascots/rhinoHeart.webp" alt="Image" style="width: 75px; height: 75px; margin-right: 10px;">
         <input type="text" id="search-input" placeholder="Search for a country" onkeydown="if (event.keyCode === 13 || event.key === 'Enter') searchCountry()">
         <button type="button" onclick="searchCountry()">Search</button>
     </div>
