--- a/src/website/home.html
+++ b/src/website/home.html
@@ -6,10 +6,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000"/>
-    <!--
     <meta name="description" content="Resilient Rhino is a global resource platform providing local suicide prevention hotlines, counseling resources, and mental health support.">
-    <meta name="keywords" content="Suicide Prevention, Mental Health, Support, Counseling, Hotlines, Resources, Global Support, Local Resources">
-    <meta name="author" content="Resilient Rhino">
+    <meta name="keywords" content="Suicide Prevention, Mental Health, Depression, Suicide, Self Harm, Support, Counseling, Hotlines, Resources, Global Support, Local Resources">
     <meta name="robots" content="index, follow">
     <meta name="revisit-after" content="1 days">
     <meta property="og:title" content="Resilient Rhino - Global Suicide Prevention Hotlines & Resources">
@@ -19,7 +17,6 @@
     <meta property="og:site_name" content="Resilient Rhino">
     <meta name="twitter:title" content="Resilient Rhino - Global Suicide Prevention Hotlines & Resources">
     <meta name="twitter:description" content="Resilient Rhino is a global resource platform providing local suicide prevention hotlines, counseling resources, and mental health support.">
-    -->
 
     <!-- Meta tags for Security -->
     <meta name="referrer" content="strict-origin-when-cross-origin">
