Updated CSS for animations

--- a/src/website/country-details.html
+++ b/src/website/country-details.html
@@ -19,7 +19,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/3.5.0/css/flag-icon.min.css">
   <link rel="stylesheet" href="./country-details.css">
 </head>
-<body>
+<body class="gradient-background">
   <script src="./quickExit.js"></script>
   <div id="country-details"></div>
   <button class="quick-exit-button" onclick="window.handleQuickExit()">Quick Exit</button>
